	* Fix termination of MathStructure::print() and format() with very large size
	* Add extra termination points for MathStructure with large size and do not sort numbers when aborted
	* Fix display of large integers in fractional modes
	* Make product() and sum() more efficient
	* Fix for()
	* Check that step size gives finite number of data points and set max data points to 1000000

2017-07-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add option to use step size instead of sampling rate for plot function
	* Fix non-decimal numbers with rpn syntax

2017-07-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Prefer non-hidden composite units over alternatives with multiple units, in optimal unit conversion (5 m/s^2 instead of 0.005 N/g)

2017-07-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* New Calculator::calculate() variant that calculates a parsed expression
	* Command line option for maximum calculation and display time

2017-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix formatting of (x^2)/(10y) (was (1*x^2)/(10y))
	* STRUCT_ABORTED MathStructure type

2017-07-10 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Rename Calculator::printMathStructureTimeOut() to Calculator::print()

2017-07-09 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not convert temperature units if other units are converted, when converting to optimal or base units
	* More efficient conversion to base units that solves issues with temperature units in conversion to base and optimal units
	* Lower the maximum exponent to avoid slow division

2017-07-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Prefer positive exponents over negative, unless the result includes a another unit with positive exponent (fixes Hz)

2017-07-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not convert to composite units in mixed units conversion
	* Fix mixed units forced by default in separate unit conversion
